<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailBookActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_below="@+id/tv_score"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/author_title"
            android:background="@drawable/toggle_selector"
            android:contentDescription="@string/img_game_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_score"
            app:layout_constraintStart_toStartOf="@+id/tv_score"
            app:layout_constraintTop_toBottomOf="@+id/tv_score" />

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="143dp"
            android:layout_height="198dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/img_game_description"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/iv_book"
            android:singleLine="false"
            android:text="@string/book_title"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toTopOf="@+id/iv_book" />

        <TextView
            android:id="@+id/score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_book"
            android:text="@string/book_rating_title"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <RatingBar
            android:id="@+id/tv_score"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_book"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            android:text="@string/book_rating_title"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/score_title" />

        <TextView
            android:id="@+id/author_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_score"
            android:layout_marginTop="48dp"
            android:layout_toEndOf="@+id/iv_book"
            android:text="@string/book_author_title"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_favorite" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author_title"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/iv_book"
            android:singleLine="false"
            android:text="@string/book_author_title"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author_title" />

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_book"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/description_title"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_book"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />

        <TextView
            android:id="@+id/tv_description"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/lorem"
            android:textColor="@color/text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/description_title"
            app:layout_constraintTop_toBottomOf="@+id/description_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



